# obs-studio

./: .gitignore  .gitmodules  CMakeLists.txt
CI/: full-build-macos.sh
UI/: window-basic-main.cpp
libobs/: CMakeLists.txt  obs-encoder.c  obs-hotkey.c  obs-internal.h  obs-module.c  obs-output.c  obs-scene.c  obs-scene.h  obs-source-transition.c  obs-source.c  obs-source.h  obs.c  obs.h
libobs-d3d11/: d3d11-subsystem.cpp
libobs-opengl/: gl-cocoa.m
libobs-winrt/: winrt-capture.cpp
libobs/graphics/: graphics-imports.c  graphics-internal.h  graphics.c  graphics.h
libobs/media-io/: video-io.c  video-io.h
libobs/util/: threading-windows.c
plugins/: CMakeLists.txt
plugins/custom-source/: CMakeLists.txt  custom-source.c
plugins/mac-capture/: mac-audio.c
plugins/mac-virtualcam/src/dal-plugin/: CMakeLists.txt
plugins/mac-virtualcam/src/obs-plugin/: plugin-main.mm
plugins/obs-ffmpeg/: CMakeLists.txt  obs-ffmpeg-mux.c  obs-ffmpeg-nvenc.c  obs-ffmpeg-source.c
plugins/obs-filters/: CMakeLists.txt  background-mask.c  circle-avatar-filter.c  obs-filters.c
plugins/obs-transitions/: transition-stinger.c
plugins/obs-x264/: obs-x264.c
plugins/rtmp-services/: rtmp-services-main.c
plugins/win-capture/: CMakeLists.txt  game-capture.c  window-capture.c
plugins/win-virtualcam/.github/workflows/: main.yml
plugins/win-virtualcam/src/queue/: share_queue.h  share_queue_read.cpp  share_queue_read.h  (+2 more)
plugins/win-virtualcam/util/: reg_path.reg  unreg_path.reg
slobs_CI/: build-script-osx.sh  build-win-obs-client.cmd  build-win.cmd  full-build-without-ipc.sh
(+5 files in other folders)
